--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 deneme1/index1.html
 deneme1/index1.html
+package.json
+deneme1/js/main.js
+deneme1/index1.html
+deneme1/index.html
+deneme1/index1.html
+.gitignore
+deneme1/index1.html
+deneme1/index1.html
